# warren

./: .env  .env.example  .gitignore  EARNINGS_INTEGRATION_SUCCESS.md  IMPLEMENTATION_PLAN.md  MODEL_IMPROVEMENTS.md  PHASE_3_COMPLETE.md  PLATEAU_BREAKING_OPTIMIZATIONS.md  README.md  README_STOCK_MODEL.md  SIMPLE_MODEL_IMPROVEMENTS.md  debug_aapl_data.py  debug_features.py  enhance_r2_score.py  phase3_check.py  plan.md  predict.py  pyproject.toml  requirements.txt  stock_data_generator.py  test_earnings_api.py  test_enhanced_lstm.py  test_finnhub_earnings.py  test_real_earnings.py  test_sentiment_output.py  test_tsla_model.py  train_stock_model.py  training_config.json  tsconfig.json
config/: config.yaml
data/models/: AAPL_enhanced_lstm.h5  AAPL_feature_scaler.pkl  AAPL_metrics.json  AAPL_scaler.pkl
src/: __init__.py  cli.py  config.py  test_integration.py
src/analysis/: fundamentals.py  sentiment.py  technical.py
src/data/: collector.py  validator.py
src/data/ingestion/: yfinance_fetcher.py
src/evaluation/: metrics.py
src/features/: generator.py  selection.py
src/models/: advanced_features.py  ensemble.py  lstm_predictor.py
src/models/architectures/: lstm_baseline.py  tcn.py  transformer_enc.py
src/models/trainers/: advanced_trainer.py  stacking.py  train_lstm.py
src/utils/: config_loader.py  helpers.py  k8s_job.py
tests/integration/: test_end_to_end.py
tests/unit/: test_config_loader.py
