# Stock AI System
# Phase 1: Foundation - Data Collection & Basic LSTM Predictor

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-ai"
version = "0.1.0"
description = "AI-powered stock analysis and prediction system"
authors = [{name = "Stock AI Team", email = "team@stockai.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["stocks", "ai", "machine-learning", "finance", "prediction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # Core data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    
    # Financial data APIs
    "yfinance>=0.2.18",
    "alpha-vantage>=2.3.1",
    "pandas-datareader>=0.10.0",
    "finnhub-python>=2.4.19",
    
    # Machine Learning
    "tensorflow>=2.13.0",
    "scikit-learn>=1.3.0",
    "xgboost>=1.7.0",
    "lightgbm>=4.0.0",
    
    # Technical Analysis
    "ta-lib>=0.4.28",
    "TA-Lib>=0.4.28",
    "pandas-ta>=0.3.14b",
    "stockstats>=0.5.2",
    
    # Database and Storage
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "redis>=4.5.0",
    
    # API and Web
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "requests>=2.31.0",
    "aiohttp>=3.8.0",
    
    # Visualization
    "matplotlib>=3.7.0",
    "plotly>=5.15.0",
    "seaborn>=0.12.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "click>=8.1.0",
    "rich>=13.4.0",
    "tqdm>=4.65.0",
    
    # Date handling
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]

[project.urls]
Homepage = "https://github.com/stockai/stock-ai"
Repository = "https://github.com/stockai/stock-ai"
Documentation = "https://stock-ai.readthedocs.io"

[project.scripts]
stock-ai = "stock_ai.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
