[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-trading-cli"
version = "0.2.0"
description = "AI Trading CLI Phase 2"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [ { name = "Author" } ]
dependencies = [
	"pandas>=2.0.0",
	"numpy>=1.24.0",
	"yfinance>=0.2.50",
	"scikit-learn>=1.4.0",
	"lightgbm>=4.0.0",
	"torch>=2.2.0",
	"pyyaml>=6.0.0",
	"mlflow>=2.11.0",
	"scipy>=1.11.0",
	"psutil>=5.9.0"
]

[project.optional-dependencies]
dev = [
	"pytest",
	"pytest-cov",
	"ruff",
	"mypy"
]

[tool.ruff]
line-length = 100
select = ["E","F","I","B"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
